--- a/src/global.css
+++ b/src/global.css
@@ -7,3 +7,14 @@
 @tailwind utilities;
 
 
+/*body {
+	background-color: #757575;
+}*/
+
+
+/*body {
+	background: radial-gradient(ellipse at bottom, #222444 0%, #090a0f 100%);
+	font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+	margin: 0;
+	width: 100%;
+}*/
